--- a/directbak.yaml
+++ b/directbak.yaml
@@ -2266,7 +2266,6 @@ payload:
   - '+.28rv.com'
   - '+.28tui.com'
   - '+.28y.com'
-  - '+.28y3.com'
   - '+.28yj.com'
   - '+.2918.com'
   - '+.29293.com'
@@ -2715,7 +2714,6 @@ payload:
   - '+.360img.cc'
   - '+.360insurancemall.com'
   - '+.360ito.com'
-  - '+.360jk.com'
   - '+.360jq.com'
   - '+.360jrjietiao.com'
   - '+.360jrkt.com'
@@ -5173,6 +5171,7 @@ payload:
   - '+.6949.com'
   - '+.695157.com'
   - '+.695175.com'
+  - '+.69525.com'
   - '+.695275.com'
   - '+.695828.com'
   - '+.695ljg.com'
@@ -7111,7 +7110,6 @@ payload:
   - '+.acg6.com'
   - '+.acgaa.xyz'
   - '+.acgdb.com'
-  - '+.acgdmzy.com'
   - '+.acgdoge.net'
   - '+.acgist.com'
   - '+.acgn.pw'
@@ -7266,6 +7264,7 @@ payload:
   - '+.adplusx.com'
   - '+.adpolestar.net'
   - '+.adportion.com'
+  - '+.adqkmob.com'
   - '+.adquan.com'
   - '+.ads4f6gf46.com'
   - '+.ads8.com'
@@ -16819,7 +16818,6 @@ payload:
   - '+.d5power.com'
   - '+.d65d6.com'
   - '+.d777.com'
-  - '+.d7ol.com'
   - '+.d7vg.com'
   - '+.d8th.com'
   - '+.d9ym.com'
@@ -18753,6 +18751,7 @@ payload:
   - '+.dovesky.com'
   - '+.dovov.com'
   - '+.dowater.com'
+  - '+.doweb8.com'
   - '+.dowebok.com'
   - '+.dowei.com'
   - '+.doweidu.com'
@@ -18949,7 +18948,6 @@ payload:
   - '+.dtcms.net'
   - '+.dtcoalmine.com'
   - '+.dtcxw.com'
-  - '+.dtdiefa.com'
   - '+.dtdream.com'
   - '+.dtdxcw.com'
   - '+.dtfcw.com'
@@ -19778,14 +19776,12 @@ payload:
   - '+.edge-byted.com'
   - '+.edgesrv.com'
   - '+.edhic.com'
-  - '+.edianchi.com'
   - '+.edianshang.com'
   - '+.edianzu.com'
   - '+.ediclot.com'
   - '+.edifier.com'
   - '+.edimei.com'
   - '+.edingzhuan.com'
-  - '+.edinuan.com'
   - '+.editcode.net'
   - '+.ediuschina.com'
   - '+.edk24.com'
@@ -20499,7 +20495,6 @@ payload:
   - '+.ethainan.com'
   - '+.ethan.pub'
   - '+.ethercap.com'
-  - '+.ethern.me'
   - '+.ethfans.org'
   - '+.etiantian.com'
   - '+.etiantian.net'
@@ -21271,7 +21266,6 @@ payload:
   - '+.fegine.com'
   - '+.feheadline.com'
   - '+.fei-hong.com'
-  - '+.fei123.com'
   - '+.fei580.com'
   - '+.feiair.com'
   - '+.feibaizhu.com'
@@ -21817,7 +21811,6 @@ payload:
   - '+.flyertea.com'
   - '+.flyertrip.com'
   - '+.flyfishx.com'
-  - '+.flyfts.com'
   - '+.flyfunny.com'
   - '+.flygo.net'
   - '+.flygon.net'
@@ -21995,7 +21988,6 @@ payload:
   - '+.founderpod.com'
   - '+.foundersc.com'
   - '+.founderstruth.org'
-  - '+.foundersz.com'
   - '+.foundertech.com'
   - '+.foundertype.com'
   - '+.foundpdf.com'
@@ -22275,7 +22267,6 @@ payload:
   - '+.funnullv28.com'
   - '+.funnullv29.com'
   - '+.funnycore.com'
-  - '+.funnypicsbox.com'
   - '+.funnyplaying.com'
   - '+.funplay66.com'
   - '+.funshion.com'
@@ -22757,7 +22748,6 @@ payload:
   - '+.gaoyizaixian.com'
   - '+.gaoyoujob.com'
   - '+.gaozhaiedu.com'
-  - '+.gaozhiip.com'
   - '+.gaozhongwuli.com'
   - '+.gaozhouba.com'
   - '+.gap.hk'
@@ -26470,6 +26460,7 @@ payload:
   - '+.hmnst.com'
   - '+.hmoe.link'
   - '+.hmplay.com'
+  - '+.hmrczp.com'
   - '+.hmsce.org'
   - '+.hmsem.com'
   - '+.hmsemi.com'
@@ -26539,6 +26530,7 @@ payload:
   - '+.hnhxin.com'
   - '+.hnhxxk.com'
   - '+.hniec.org'
+  - '+.hnied.xyz'
   - '+.hniic.com'
   - '+.hnisca.org'
   - '+.hniso.net'
@@ -27379,7 +27371,6 @@ payload:
   - '+.huasheng100.com'
   - '+.huashengdaili.com'
   - '+.huashengls.com'
-  - '+.huashenll.com'
   - '+.huashi6.com'
   - '+.huashichang.com'
   - '+.huashilm.com'
@@ -30533,7 +30524,6 @@ payload:
   - '+.jdycdn.com'
   - '+.jdyou.com'
   - '+.jdypf.com'
-  - '+.jdzbth.com'
   - '+.jdzdeyy.com'
   - '+.jdzeduyun.com'
   - '+.jdzj.com'
@@ -31850,7 +31840,6 @@ payload:
   - '+.joloplay.com'
   - '+.jomodns.com'
   - '+.jomoxc.com'
-  - '+.jonahome.net'
   - '+.jonllen.com'
   - '+.jonny.vip'
   - '+.jonsbo.com'
@@ -32197,7 +32186,6 @@ payload:
   - '+.jtv123.com'
   - '+.jtxys8.com'
   - '+.jtyjy.com'
-  - '+.jtzhuan.xyz'
   - '+.ju33.com'
   - '+.ju51.com'
   - '+.ju81.cc'
@@ -32987,7 +32975,6 @@ payload:
   - '+.kc87.com'
   - '+.kccidc.com'
   - '+.kcdn0.com'
-  - '+.kcdns.net'
   - '+.kcdnvip.com'
   - '+.kchance.com'
   - '+.kchile.com'
@@ -33518,7 +33505,6 @@ payload:
   - '+.koiclub.net'
   - '+.koikreative.com'
   - '+.koinocn.com'
-  - '+.koippt.com'
   - '+.kok4030.com'
   - '+.kokojia.com'
   - '+.kole8.com'
@@ -34009,6 +33995,7 @@ payload:
   - '+.kuwew.com'
   - '+.kuwuu.com'
   - '+.kuxiaoji.com'
+  - '+.kuxiaozhu.com'
   - '+.kuxiuktv.com'
   - '+.kuxuexi.com'
   - '+.kuy8.com'
@@ -34392,6 +34379,7 @@ payload:
   - '+.lanzhuwh.com'
   - '+.lanzou.com'
   - '+.lanzoub.com'
+  - '+.lanzoue.com'
   - '+.lanzouf.com'
   - '+.lanzoug.com'
   - '+.lanzoui.com'
@@ -34614,7 +34602,6 @@ payload:
   - '+.lddengine.com'
   - '+.lddgo.net'
   - '+.ldeng.com'
-  - '+.ldjx.cc'
   - '+.ldkj-zs.com'
   - '+.ldmap.net'
   - '+.ldmnq.com'
@@ -34806,7 +34793,6 @@ payload:
   - '+.leleketang.com'
   - '+.lelelala.net'
   - '+.lelepyq.com'
-  - '+.leleren.com'
   - '+.leletv.com'
   - '+.leletv.net'
   - '+.lelewl.com'
@@ -36041,7 +36027,6 @@ payload:
   - '+.longshine.com'
   - '+.longsok.com'
   - '+.longsto.com'
-  - '+.longsunhenges.com'
   - '+.longsys.com'
   - '+.longtaifoods.com'
   - '+.longtaiwj.com'
@@ -41252,7 +41237,6 @@ payload:
   - '+.p2ptouhang.com'
   - '+.p2pxing.com'
   - '+.p2pxsj.com'
-  - '+.p3k3.com'
   - '+.p4pp.com'
   - '+.p512.com'
   - '+.p5412.com'
@@ -42073,7 +42057,6 @@ payload:
   - '+.pjhubs.com'
   - '+.pjjyzx.com'
   - '+.pjlyds.com'
-  - '+.pjnoi.com'
   - '+.pjob.net'
   - '+.pjrcn.com'
   - '+.pjrunfutang.com'
@@ -43599,6 +43582,7 @@ payload:
   - '+.qjsb88.com'
   - '+.qjsmartech.com'
   - '+.qjtrip.com'
+  - '+.qjwenming.com'
   - '+.qjwhzs.com'
   - '+.qjxgold.com'
   - '+.qjystang.com'
@@ -43633,7 +43617,6 @@ payload:
   - '+.qlgpy.com'
   - '+.qlidc.com'
   - '+.qlivecdn.com'
-  - '+.qljgw.com'
   - '+.qll-times.com'
   - '+.qlmoney.com'
   - '+.qlotc.net'
@@ -43818,7 +43801,6 @@ payload:
   - '+.qqu.cc'
   - '+.qqumall.com'
   - '+.qqurl.com'
-  - '+.qqvv88.com'
   - '+.qqwechat.com'
   - '+.qqwmly.com'
   - '+.qqwmx.com'
@@ -44627,7 +44609,6 @@ payload:
   - '+.renderincloud.com'
   - '+.rendna.com'
   - '+.renegade-project.org'
-  - '+.renfei.net'
   - '+.rengwan.com'
   - '+.renhence.com'
   - '+.renji.com'
@@ -44726,6 +44707,7 @@ payload:
   - '+.rffanlab.com'
   - '+.rfhhzx.com'
   - '+.rfidcardcube.com'
+  - '+.rfidfans.com'
   - '+.rfidtech.cc'
   - '+.rfk.com'
   - '+.rfmwave.com'
@@ -46746,7 +46728,6 @@ payload:
   - '+.shijicloud.com'
   - '+.shijie2.com'
   - '+.shijiebang.com'
-  - '+.shijiebao.vip'
   - '+.shijieditu.net'
   - '+.shijiehuarenbao.com'
   - '+.shijiemap.com'
@@ -47935,7 +47916,6 @@ payload:
   - '+.smmy365.com'
   - '+.smo-clinplus.com'
   - '+.smo-software.com'
-  - '+.smochen.com'
   - '+.smohan.net'
   - '+.smokeliq.com'
   - '+.smoothgroup.cc'
@@ -48059,7 +48039,6 @@ payload:
   - '+.socolar.com'
   - '+.socomic.com'
   - '+.socool-tech.com'
-  - '+.socsight.com'
   - '+.sodalife.xyz'
   - '+.sodao.com'
   - '+.sodc8.com'
@@ -48571,7 +48550,6 @@ payload:
   - '+.sspai.com'
   - '+.sspai.me'
   - '+.sspeeddns.com'
-  - '+.sspezz.com'
   - '+.ssports.com'
   - '+.ssports.net'
   - '+.sspsky.com'
@@ -48852,7 +48830,6 @@ payload:
   - '+.sudu123.net'
   - '+.suducha.com'
   - '+.sududa.com'
-  - '+.sudun-cname.com'
   - '+.sudupower.net'
   - '+.sudusite.com'
   - '+.sueflower.com'
@@ -50933,7 +50910,6 @@ payload:
   - '+.tjst.net'
   - '+.tjstats.com'
   - '+.tjtele.com'
-  - '+.tjtongye.com'
   - '+.tjtusuguan.com'
   - '+.tjufbase.com'
   - '+.tjumc.com'
@@ -55810,7 +55786,6 @@ payload:
   - '+.wtgsdl.com'
   - '+.wting.info'
   - '+.wtn5.com'
-  - '+.wtobag.com'
   - '+.wtoip.com'
   - '+.wtojob.com'
   - '+.wtoutiao.com'
@@ -55950,7 +55925,6 @@ payload:
   - '+.wumart.com'
   - '+.wumeishebei.com'
   - '+.wumii.com'
-  - '+.wumii.org'
   - '+.wumii.tv'
   - '+.wuming.com'
   - '+.wuqing.cc'
@@ -57300,7 +57274,6 @@ payload:
   - '+.xihaiannews.com'
   - '+.xihawan8.com'
   - '+.xihuan.me'
-  - '+.xihuanfang.com'
   - '+.xihusgh.com'
   - '+.xiiie.com'
   - '+.xiimoon.com'
@@ -58050,6 +58023,7 @@ payload:
   - '+.xn--fiqs8s'
   - '+.xn--fiqv94di0c54ipe.net'
   - '+.xn--glr604k.com'
+  - '+.xn--iiq222b6igvp5c.com'
   - '+.xn--io0a7i'
   - '+.xn--it-1r3f.com'
   - '+.xn--jvrr72kgma408a.com'
@@ -58528,6 +58502,7 @@ payload:
   - '+.xuyilx.com'
   - '+.xuyimin.club'
   - '+.xuyuanyi.com'
+  - '+.xuyueswkj.com'
   - '+.xuzhi.net'
   - '+.xuzhoujob.com'
   - '+.xvista.com'
@@ -60833,7 +60808,6 @@ payload:
   - '+.ytbfilm.com'
   - '+.ytcbh.com'
   - '+.ytcj.com'
-  - '+.ytcos.com'
   - '+.ytcutv.com'
   - '+.ytdaily.com'
   - '+.ytdcloud.com'
@@ -62575,7 +62549,6 @@ payload:
   - '+.zhidesoft.com'
   - '+.zhidieyun.com'
   - '+.zhidj.com'
-  - '+.zhidmai.com'
   - '+.zhidtech.com'
   - '+.zhiduopc.com'
   - '+.zhidx.com'
@@ -63057,7 +63030,6 @@ payload:
   - '+.zhuiwan.org'
   - '+.zhuixin.cc'
   - '+.zhuixinfan.com'
-  - '+.zhuixingwang.com'
   - '+.zhuiyi.ai'
   - '+.zhuizhuiimg.com'
   - '+.zhuizhuiyoyo.com'
@@ -64223,7 +64195,6 @@ payload:
   - '+.zybk6.com'
   - '+.zyboe.com'
   - '+.zybuluo.com'
-  - '+.zyc918.com'
   - '+.zyccc.com'
   - '+.zycits.com'
   - '+.zycmfw.com'
