--- a/directbak.yaml
+++ b/directbak.yaml
@@ -349,7 +349,6 @@ payload:
   - '+.0570fc.com'
   - '+.0570zs.com'
   - '+.057191.com'
-  - '+.0571dns.com'
   - '+.0571ok.com'
   - '+.0573fang.com'
   - '+.0573ren.com'
@@ -2126,7 +2125,6 @@ payload:
   - '+.23wx.io'
   - '+.23xs.cc'
   - '+.23xs.tv'
-  - '+.23xsba.cc'
   - '+.23xsw.cc'
   - '+.23yy.com'
   - '+.240yx.com'
@@ -2414,7 +2412,6 @@ payload:
   - '+.310win.com'
   - '+.311100.com'
   - '+.311wan.com'
-  - '+.312168.com'
   - '+.312green.com'
   - '+.313.com'
   - '+.313515.com'
@@ -4515,7 +4512,6 @@ payload:
   - '+.56php.com'
   - '+.56qq.com'
   - '+.56show.com'
-  - '+.56shuba.cc'
   - '+.56shuku.org'
   - '+.56steel.com'
   - '+.56tchr.com'
@@ -7504,7 +7500,6 @@ payload:
   - '+.ai-thinker.com'
   - '+.ai.cc'
   - '+.ai012.com'
-  - '+.ai2hao.com'
   - '+.ai7.com'
   - '+.ai7.org'
   - '+.ai9475.com'
@@ -7900,7 +7895,6 @@ payload:
   - '+.alacun.com'
   - '+.aladdin-e.com'
   - '+.aladdinnet.com'
-  - '+.alading123.com'
   - '+.alai.net'
   - '+.alameal.com'
   - '+.alanyhq.com'
@@ -9012,7 +9006,6 @@ payload:
   - '+.atomhike-en.com'
   - '+.atomhike.com'
   - '+.atomic-art.com'
-  - '+.atomy.tech'
   - '+.atoolbox.net'
   - '+.atpanel.com'
   - '+.atstudy.com'
@@ -12289,6 +12282,7 @@ payload:
   - '+.casystar.com'
   - '+.cat898.com'
   - '+.catdggga.com'
+  - '+.catering-shizuoka.com'
   - '+.catfish-cms.com'
   - '+.catguo.com'
   - '+.cathayagroup.com'
@@ -12432,7 +12426,6 @@ payload:
   - '+.ccidthinktank.com'
   - '+.ccidwise.com'
   - '+.ccieh3c.com'
-  - '+.ccieshow.com'
   - '+.ccigchina.com'
   - '+.ccihr.com'
   - '+.ccimz.com'
@@ -16640,6 +16633,7 @@ payload:
   - '+.cyb-cie.com'
   - '+.cyb800.com'
   - '+.cyberfunn.xyz'
+  - '+.cybermedicine2000.com'
   - '+.cyberway-china.net'
   - '+.cybtc.com'
   - '+.cybtc.info'
@@ -17575,7 +17569,6 @@ payload:
   - '+.demososo.com'
   - '+.denachina.com'
   - '+.denganliang.com'
-  - '+.dengbi.cc'
   - '+.dengbi8.com'
   - '+.dengcuo.com'
   - '+.denghao.org'
@@ -18869,7 +18862,6 @@ payload:
   - '+.dreamo100.com'
   - '+.dreampiggy.com'
   - '+.dreams-travel.com'
-  - '+.dreamsky.me'
   - '+.dreamswood.com'
   - '+.dreamsz.net'
   - '+.dreawer.com'
@@ -19049,6 +19041,7 @@ payload:
   - '+.dun-mfy-cdn.com'
   - '+.dunjiaodu.com'
   - '+.dunkhome.com'
+  - '+.dunstanhardcastle.com'
   - '+.dunwang.com'
   - '+.duobei.com'
   - '+.duobeiyun.net'
@@ -20551,7 +20544,6 @@ payload:
   - '+.eugnnn.com'
   - '+.eui.cc'
   - '+.euibe.com'
-  - '+.euler.tech'
   - '+.eulike.com'
   - '+.eulixos.com'
   - '+.eureka.name'
@@ -20767,6 +20759,7 @@ payload:
   - '+.ezaiai.com'
   - '+.ezbuypay.com'
   - '+.ezca.org'
+  - '+.ezchip.tech'
   - '+.ezcname.com'
   - '+.ezcpt.com'
   - '+.ezcun.com'
@@ -21145,6 +21138,7 @@ payload:
   - '+.fastsoso.cc'
   - '+.faststatics.com'
   - '+.fat999.com'
+  - '+.fatbobman.com'
   - '+.fatedier.com'
   - '+.fateskins.com'
   - '+.fatiao.pro'
@@ -21175,6 +21169,7 @@ payload:
   - '+.fayiyi.com'
   - '+.fayurumen.com'
   - '+.fazhijx.com'
+  - '+.fazz.fun'
   - '+.fb.mu'
   - '+.fbabi.com'
   - '+.fbaichuan.com'
@@ -22329,6 +22324,7 @@ payload:
   - '+.fuzegame.com'
   - '+.fuzfu.net'
   - '+.fuzhimao.com'
+  - '+.fuzhoufashi.com'
   - '+.fuzhuangwang.com'
   - '+.fuzhugo.com'
   - '+.fview.com'
@@ -25183,6 +25179,7 @@ payload:
   - '+.haoqikan.com'
   - '+.haoqixingstem.com'
   - '+.haoqq.com'
+  - '+.haor233.com'
   - '+.haorc.com'
   - '+.haoread.com'
   - '+.haorencai.net'
@@ -25209,7 +25206,6 @@ payload:
   - '+.haosix.com'
   - '+.haosou.com'
   - '+.haostay.com'
-  - '+.haote.com'
   - '+.haotianhuyu.com'
   - '+.haotihui.com'
   - '+.haotijin.com'
@@ -25668,6 +25664,7 @@ payload:
   - '+.hduofen.com'
   - '+.hdurl.me'
   - '+.hduzplus.xyz'
+  - '+.hdwbcloud.com'
   - '+.hdwbsaas.com'
   - '+.hdwebpyqa.com'
   - '+.hdwebpyqe.com'
@@ -25694,6 +25691,7 @@ payload:
   - '+.heart-game.com'
   - '+.heartide.com'
   - '+.heartinsti.com'
+  - '+.heataek.com'
   - '+.hebangdianzi.com'
   - '+.hebaodai.com'
   - '+.hebbank.com'
@@ -25883,6 +25881,7 @@ payload:
   - '+.hengannet.com'
   - '+.hengbogroup.com'
   - '+.hengchang6.com'
+  - '+.hengdawenbo.com'
   - '+.hengdayun.com'
   - '+.hengdianfilm.com'
   - '+.hengdianworld.com'
@@ -27535,7 +27534,6 @@ payload:
   - '+.huicheimg.com'
   - '+.huichengip.com'
   - '+.huichewang.com'
-  - '+.huichexiang.net'
   - '+.huicx7.com'
   - '+.huidada.net'
   - '+.huidan.net'
@@ -29677,7 +29675,6 @@ payload:
   - '+.ipuu.net'
   - '+.ipv4.host'
   - '+.ipv6dns.com'
-  - '+.ipv6dp.com'
   - '+.ipyker.com'
   - '+.ipyy.com'
   - '+.iq123.com'
@@ -29855,6 +29852,7 @@ payload:
   - '+.isvjd.com'
   - '+.isvup.com'
   - '+.iswifting.com'
+  - '+.iswitch.app'
   - '+.isyour.love'
   - '+.it-bound.com'
   - '+.it-crazy.net'
@@ -29999,7 +29997,6 @@ payload:
   - '+.itonghui.com'
   - '+.itopers.com'
   - '+.itophis.com'
-  - '+.itopic.org'
   - '+.itopplay.com'
   - '+.itopsdk.com'
   - '+.itotii.com'
@@ -31541,6 +31538,7 @@ payload:
   - '+.jiyuncn.com'
   - '+.jizhan.com'
   - '+.jizhangzhuce.com'
+  - '+.jizhazha.com'
   - '+.jizhiba.com'
   - '+.jizhidsp.com'
   - '+.jizhimobi.com'
@@ -32205,7 +32203,6 @@ payload:
   - '+.juc365.com'
   - '+.jucanw.com'
   - '+.jucelin.com'
-  - '+.juchenedu.com'
   - '+.jucheng01.net'
   - '+.juchuangbio.com'
   - '+.judouapp.com'
@@ -34009,7 +34006,6 @@ payload:
   - '+.kuyun.com'
   - '+.kuzhazha.com'
   - '+.kuzhengame.com'
-  - '+.kveff.com'
   - '+.kvegg.com'
   - '+.kveii.com'
   - '+.kvemm.com'
@@ -34082,6 +34078,7 @@ payload:
   - '+.ky01002.com'
   - '+.ky01005.com'
   - '+.ky01010.com'
+  - '+.ky01013.com'
   - '+.ky107.co'
   - '+.ky151.co'
   - '+.ky55005.com'
@@ -36675,6 +36672,7 @@ payload:
   - '+.lytuchuang10.com'
   - '+.lytuchuang12.com'
   - '+.lytuchuang13.com'
+  - '+.lytuchuang17.com'
   - '+.lytuchuang2.com'
   - '+.lytuchuang3.com'
   - '+.lytuchuang4.com'
@@ -37102,6 +37100,7 @@ payload:
   - '+.maoercdn.com'
   - '+.maoflag.net'
   - '+.maogepingbeauty.com'
+  - '+.maogp.com'
   - '+.maogumaogu.com'
   - '+.maogx.win'
   - '+.maoha.com'
@@ -37373,6 +37372,7 @@ payload:
   - '+.me-city.com'
   - '+.me361.com'
   - '+.me4399.com'
+  - '+.me8gs.app'
   - '+.meadin.com'
   - '+.meaninggame.com'
   - '+.meazhi.com'
@@ -38299,7 +38299,6 @@ payload:
   - '+.mm52.com'
   - '+.mm52.net'
   - '+.mm8mm8.com'
-  - '+.mm957.com'
   - '+.mmall.com'
   - '+.mmaqa.com'
   - '+.mmarket.com'
@@ -39873,6 +39872,7 @@ payload:
   - '+.niaocms.com'
   - '+.niaogebiji.com'
   - '+.niaola.com'
+  - '+.niaoquan.fun'
   - '+.niaoyun.com'
   - '+.niba.com'
   - '+.nibaguai.com'
@@ -40083,7 +40083,6 @@ payload:
   - '+.njzztyl.com'
   - '+.nkjwtd.com'
   - '+.nkscdn.com'
-  - '+.nktxv.com'
   - '+.nkyp.com'
   - '+.nlark.com'
   - '+.nlinkline.com'
@@ -40157,6 +40156,7 @@ payload:
   - '+.nocode.com'
   - '+.noddl.me'
   - '+.nodeasy.com'
+  - '+.nodefu.net'
   - '+.nodeing.com'
   - '+.nodejs999.com'
   - '+.nodekey.com'
@@ -40308,6 +40308,7 @@ payload:
   - '+.nslifang.com'
   - '+.nsoad.com'
   - '+.nsoft.vip'
+  - '+.nspllines.com'
   - '+.nsrfww.com'
   - '+.nsrjlb.com'
   - '+.nsshare.com'
@@ -40619,7 +40620,6 @@ payload:
   - '+.oh100.com'
   - '+.ohaotian.com'
   - '+.ohipic.com'
-  - '+.ohmygong.com'
   - '+.ohoyao.com'
   - '+.ohqly.com'
   - '+.ohtly.com'
@@ -40689,7 +40689,6 @@ payload:
   - '+.oklink.com'
   - '+.oklx.com'
   - '+.okmart.com'
-  - '+.okmeeting.com'
   - '+.okmyapp.com'
   - '+.okng.com'
   - '+.okoer.com'
@@ -42098,6 +42097,7 @@ payload:
   - '+.pkufh.com'
   - '+.pkulaw.com'
   - '+.pkulaws.com'
+  - '+.pkupuzzle.art'
   - '+.pkurc.com'
   - '+.pkusky.com'
   - '+.pkusp.com'
@@ -42184,7 +42184,6 @@ payload:
   - '+.pmptuan.com'
   - '+.pmquanzi.com'
   - '+.pmr66.com'
-  - '+.pmsi.tech'
   - '+.pmsra.com'
   - '+.pmtalk.club'
   - '+.pmtoo.com'
@@ -42483,7 +42482,6 @@ payload:
   - '+.projector-window.com'
   - '+.prolto.com'
   - '+.promisingedu.com'
-  - '+.promoadx.com'
   - '+.pronax.tech'
   - '+.propsad.com'
   - '+.proresearch.org'
@@ -42868,7 +42866,6 @@ payload:
   - '+.qdthgs.com'
   - '+.qdtongxinedu.net'
   - '+.qdwenxue.com'
-  - '+.qdwght.com'
   - '+.qdwsb.com'
   - '+.qdxfgy.com'
   - '+.qdxtcw.com'
@@ -43806,6 +43803,7 @@ payload:
   - '+.qqwmx.com'
   - '+.qqwxmail.com'
   - '+.qqwys.net'
+  - '+.qqx.com'
   - '+.qqxmail.com'
   - '+.qqxs.cc'
   - '+.qqxs.la'
@@ -44011,6 +44009,7 @@ payload:
   - '+.queniufm.com'
   - '+.queniuhy.com'
   - '+.queniuiq.com'
+  - '+.queniuiy.com'
   - '+.queniukr.com'
   - '+.queniukt.com'
   - '+.queniukw.com'
@@ -44395,7 +44394,6 @@ payload:
   - '+.rashost.com'
   - '+.raspigeek.com'
   - '+.rastargame.com'
-  - '+.raster.tech'
   - '+.rata-catering.com'
   - '+.rationmcu.com'
   - '+.ratuo.com'
@@ -44860,7 +44858,6 @@ payload:
   - '+.rnfengwo.com'
   - '+.rngtest.com'
   - '+.rnhqxh.com'
-  - '+.rno.xyz'
   - '+.ro4.cc'
   - '+.ro50.com'
   - '+.road-group.com'
@@ -46354,6 +46351,7 @@ payload:
   - '+.shanhu99.com'
   - '+.shanhuu.com'
   - '+.shanhuxueyuan.com'
+  - '+.shanjianzhan.com'
   - '+.shanjinqh.com'
   - '+.shankejingling.com'
   - '+.shanliao.com'
@@ -47967,7 +47965,6 @@ payload:
   - '+.snbkf34.com'
   - '+.sncdental.com'
   - '+.sncoda.com'
-  - '+.sndba.com'
   - '+.sndhr.com'
   - '+.sndo.com'
   - '+.sneac.com'
@@ -48610,7 +48607,6 @@ payload:
   - '+.starming.com'
   - '+.starooo.com'
   - '+.starpainters.net'
-  - '+.starparkshenzhen.com'
   - '+.starpiao.com'
   - '+.starrockinvest.com'
   - '+.starrtc.com'
@@ -50476,7 +50472,6 @@ payload:
   - '+.thetigerhood.com'
   - '+.thetongji.com'
   - '+.thetype.cloud'
-  - '+.thewindrun.com'
   - '+.thewowa.com'
   - '+.thexnode.com'
   - '+.theyun.com'
@@ -53030,6 +53025,7 @@ payload:
   - '+.vemarsstatic.com'
   - '+.vemic.com'
   - '+.vemvm.com'
+  - '+.venlvcloud.com'
   - '+.ventoy.net'
   - '+.venucia.com'
   - '+.venuscn.com'
@@ -53084,6 +53080,7 @@ payload:
   - '+.vghall.com'
   - '+.vgjump.com'
   - '+.vglook.com'
+  - '+.vgnclub.com'
   - '+.vgoapp.com'
   - '+.vgooo.com'
   - '+.vgover.com'
@@ -53339,6 +53336,7 @@ payload:
   - '+.vodjk.com'
   - '+.vohringer.com'
   - '+.voicedic.com'
+  - '+.voicer.info'
   - '+.voicer.me'
   - '+.voidcc.com'
   - '+.voidking.com'
@@ -53375,7 +53373,6 @@ payload:
   - '+.voole.net'
   - '+.voovlive.com'
   - '+.voovmeeting.com'
-  - '+.vor.xyz'
   - '+.vortexfun.com'
   - '+.vote8.cc'
   - '+.vote8.com'
@@ -53955,7 +53952,6 @@ payload:
   - '+.wapadv.com'
   - '+.waptt.com'
   - '+.wapzk.net'
-  - '+.waqiang.com'
   - '+.warcraftchina.com'
   - '+.warestage.com'
   - '+.warrillas.com'
@@ -56255,7 +56251,6 @@ payload:
   - '+.wzzp.com'
   - '+.wzzww.com'
   - '+.x-bows.com'
-  - '+.x-cti.org'
   - '+.x-jishu.com'
   - '+.x-mol.com'
   - '+.x-plans.com'
@@ -57260,6 +57255,7 @@ payload:
   - '+.xifumi.com'
   - '+.xigeweb.com'
   - '+.xigou100.com'
+  - '+.xigoubao.com'
   - '+.xigua110.com'
   - '+.xiguabook.com'
   - '+.xiguaimg.com'
@@ -58104,7 +58100,6 @@ payload:
   - '+.xpj0791.cc'
   - '+.xpjbbs.com'
   - '+.xplaymobile.com'
-  - '+.xplian.net'
   - '+.xpsheying.com'
   - '+.xpsy.net'
   - '+.xptt.com'
@@ -58826,7 +58821,6 @@ payload:
   - '+.yalongsi.com'
   - '+.yalqq8976.com'
   - '+.yamadesignlab.com'
-  - '+.yamadie.net'
   - '+.yameijie.com'
   - '+.yameisj.com'
   - '+.yamibo.com'
@@ -58983,7 +58977,6 @@ payload:
   - '+.yaoliwang.com'
   - '+.yaomaiche.com'
   - '+.yaoman.net'
-  - '+.yaomuzhubao.com'
   - '+.yaonano.com'
   - '+.yaooxx.space'
   - '+.yaopaiming.com'
@@ -59498,6 +59491,7 @@ payload:
   - '+.yifu.net'
   - '+.yifubao.com'
   - '+.yifucj.com'
+  - '+.yifuhe.com'
   - '+.yifuls.com'
   - '+.yifutangvip.net'
   - '+.yifutu.com'
@@ -59933,7 +59927,6 @@ payload:
   - '+.yiyaohang.com'
   - '+.yiyaojd.com'
   - '+.yiyaojie.com'
-  - '+.yiyatuan.com'
   - '+.yiybb.com'
   - '+.yiye.ai'
   - '+.yiyebang.com'
@@ -59990,6 +59983,7 @@ payload:
   - '+.yjfs8.com'
   - '+.yjhyjl.com'
   - '+.yjihua.com'
+  - '+.yjiyun.com'
   - '+.yjk.com'
   - '+.yjk.im'
   - '+.yjldp.com'
@@ -61574,7 +61568,6 @@ payload:
   - '+.yyrenting.com'
   - '+.yyrplay.com'
   - '+.yyrtv.com'
-  - '+.yysg11.co'
   - '+.yystatic.com'
   - '+.yysub.net'
   - '+.yysweb.com'
@@ -62926,7 +62919,6 @@ payload:
   - '+.zhouyuanchao.com'
   - '+.zhouzhuang.net'
   - '+.zhowe.net'
-  - '+.zhpanzi.com'
   - '+.zhqyue.com'
   - '+.zhqyx.com'
   - '+.zhrczp.com'
@@ -63718,6 +63710,7 @@ payload:
   - '+.zoosnet.net'
   - '+.zoossoft.com'
   - '+.zoossoft.net'
+  - '+.zooszyservice.com'
   - '+.zootope.ink'
   - '+.zootui.com'
   - '+.zooyoo.cc'
