--- a/process.yaml
+++ b/process.yaml
@@ -80,8 +80,9 @@ payload:
   - PROCESS-NAME, com.sohu.inputmethod.sogou.xiaomi #小米搜狗输入法
   - PROCESS-NAME, com.iflytek.inputmethod.miui #小米讯飞输入法
  # 需要直连的域名
-  # - DOMAIN-SUFFIX,xn--ngstr-lra8j.com
-  # - DOMAIN-SUFFIX,googleapis.cn
+  - DOMAIN-SUFFIX,googleapis.cn
+  - DOMAIN-SUFFIX,xn--ngstr-lra8j.com
+  - DOMAIN-SUFFIX,xn--ngstr-cn-8za9o.com
   - DOMAIN-SUFFIX,vxtrans.com
   - DOMAIN-SUFFIX,gitee.io
   - DOMAIN-SUFFIX,injections.adguard.org
