--- a/directbak.yaml
+++ b/directbak.yaml
@@ -201,6 +201,7 @@ payload:
   - '+.027wcbyy.com'
   - '+.027xf.com'
   - '+.027yx.com'
+  - '+.027zb.com'
   - '+.027zhan.com'
   - '+.027zpw.com'
   - '+.0283home.com'
@@ -261,7 +262,6 @@ payload:
   - '+.03964.com'
   - '+.03dq.com'
   - '+.03k.org'
-  - '+.03nq.com'
   - '+.0411.com'
   - '+.0411e.com'
   - '+.0411hd.com'
@@ -2379,7 +2379,6 @@ payload:
   - '+.3000xs.com'
   - '+.3001.net'
   - '+.300113.com'
-  - '+.3003lvjuan.com'
   - '+.300400.net'
   - '+.300624.com'
   - '+.300hu.com'
@@ -5144,7 +5143,6 @@ payload:
   - '+.6868.com'
   - '+.6868shop.com'
   - '+.6868yx.com'
-  - '+.688799a.com'
   - '+.688xc.com'
   - '+.6899wan.com'
   - '+.68china.net'
@@ -6943,7 +6941,6 @@ payload:
   - '+.a-sy.com'
   - '+.a0598.com'
   - '+.a0bi.com'
-  - '+.a1166.com'
   - '+.a135.net'
   - '+.a166.com'
   - '+.a1736.com'
@@ -7562,7 +7559,6 @@ payload:
   - '+.aidog.com'
   - '+.aidong.me'
   - '+.aidoor.net'
-  - '+.aidouer.net'
   - '+.aidpaper.com'
   - '+.aidrive.com'
   - '+.aiduoka.com'
@@ -9840,7 +9836,6 @@ payload:
   - '+.bazi.xin'
   - '+.bazi5.com'
   - '+.bazp.net'
-  - '+.bb-edu.com'
   - '+.bb-game.com'
   - '+.bb-pco.com'
   - '+.bb06.com'
@@ -10476,7 +10471,6 @@ payload:
   - '+.bihu.com'
   - '+.bihubao.com'
   - '+.biikan.com'
-  - '+.biji.io'
   - '+.biji13.com'
   - '+.bijiago.com'
   - '+.bijiagou.com'
@@ -15739,7 +15733,6 @@ payload:
   - '+.compgoo.com'
   - '+.compliant1.com'
   - '+.compressor-pld.com'
-  - '+.computer.run'
   - '+.comra.org'
   - '+.comsenz-service.com'
   - '+.comsenz.com'
@@ -17501,7 +17494,6 @@ payload:
   - '+.dedesos.com'
   - '+.dedeyun.com'
   - '+.dedezhuji.com'
-  - '+.deemob.com'
   - '+.deemos.com'
   - '+.deepbluenetwork.com'
   - '+.deepcloudsdp.com'
@@ -19288,7 +19280,6 @@ payload:
   - '+.dyketai.net'
   - '+.dykj.site'
   - '+.dylc.com'
-  - '+.dyldd.com'
   - '+.dyly.com'
   - '+.dyonr.com'
   - '+.dyp009.com'
@@ -19478,7 +19469,6 @@ payload:
   - '+.eaibot.com'
   - '+.eaka365.com'
   - '+.eal-ceair.com'
-  - '+.eal77.com'
   - '+.ealdi.xyz'
   - '+.eallcn.com'
   - '+.eallerp.com'
@@ -21463,7 +21453,6 @@ payload:
   - '+.fenxianglife.com'
   - '+.fenxiyi.com'
   - '+.fenxuekeji.com'
-  - '+.fenying.net'
   - '+.fenyu.net'
   - '+.fenyucn.com'
   - '+.fenzhi.com'
@@ -22056,7 +22045,6 @@ payload:
   - '+.freekaobo.com'
   - '+.freekaoyan.com'
   - '+.freekeyan.com'
-  - '+.freelance.city'
   - '+.freelycode.com'
   - '+.freelynet.com'
   - '+.freemancn.com'
@@ -23493,7 +23481,6 @@ payload:
   - '+.godns.site'
   - '+.godo.pub'
   - '+.godoor.com'
-  - '+.godrry.com'
   - '+.godruoyi.com'
   - '+.godsheepteam.com'
   - '+.godsignal.com'
@@ -24346,7 +24333,6 @@ payload:
   - '+.gxeqx.com'
   - '+.gxfcq.com'
   - '+.gxfdcw.com'
-  - '+.gxfeifan123.com'
   - '+.gxfengjie.com'
   - '+.gxfengxiang.com'
   - '+.gxfin.com'
@@ -24469,7 +24455,6 @@ payload:
   - '+.gzbio.net'
   - '+.gzbmw.com'
   - '+.gzbzsport.com'
-  - '+.gzchaobi.com'
   - '+.gzchupai.com'
   - '+.gzcl999.com'
   - '+.gzcn.net'
@@ -25213,7 +25198,6 @@ payload:
   - '+.haotoufa.com'
   - '+.haotougao.com'
   - '+.haotougu.com'
-  - '+.haotu.net'
   - '+.haotui.com'
   - '+.haotukankan.com'
   - '+.haouc.com'
@@ -26581,7 +26565,6 @@ payload:
   - '+.hnsdzjy.com'
   - '+.hnsfdc.com'
   - '+.hnshengben.com'
-  - '+.hnsimeng.com'
   - '+.hnsite.cc'
   - '+.hnsiwei.com'
   - '+.hnsktc.com'
@@ -29239,7 +29222,6 @@ payload:
   - '+.imicang.com'
   - '+.imiker.com'
   - '+.imindmap.cc'
-  - '+.iminho.me'
   - '+.iminisd.com'
   - '+.imitui.com'
   - '+.imixpark.com'
@@ -29529,7 +29511,6 @@ payload:
   - '+.inveno.com'
   - '+.inverter.so'
   - '+.invescogreatwall.com'
-  - '+.investment.zone'
   - '+.investoday.net'
   - '+.investorscn.com'
   - '+.investstkitts.org'
@@ -35865,7 +35846,6 @@ payload:
   - '+.lnk0.com'
   - '+.lnkdata.com'
   - '+.lnlotto.com'
-  - '+.lnmp.org'
   - '+.lnok.net'
   - '+.lnpjw.com'
   - '+.lnqwe.com'
@@ -36782,7 +36762,6 @@ payload:
   - '+.maccura.com'
   - '+.macdaxue.com'
   - '+.macerikson.com'
-  - '+.macflow.net'
   - '+.machaojin.com'
   - '+.machenike.com'
   - '+.machine-information.com'
@@ -38069,7 +38048,6 @@ payload:
   - '+.mingjian.com'
   - '+.mingjinglu.com'
   - '+.minglian.com'
-  - '+.mingliwenhua.com'
   - '+.mingmen-tech.com'
   - '+.mingpian.biz'
   - '+.mingren888.com'
@@ -39462,7 +39440,6 @@ payload:
   - '+.nationstech.com'
   - '+.naturali.io'
   - '+.nature-museum.net'
-  - '+.nature.zone'
   - '+.naturesvariety-china.com'
   - '+.natywish.com'
   - '+.nauac.com'
@@ -40146,6 +40123,7 @@ payload:
   - '+.nnynrc.com'
   - '+.nnzsxblaw.com'
   - '+.noahedu.com'
+  - '+.noahgroup.com'
   - '+.noahsnail.com'
   - '+.noahteck.com'
   - '+.nobmoo.com'
@@ -41080,7 +41058,6 @@ payload:
   - '+.oufa-travel.com'
   - '+.oufengblog.com'
   - '+.oufusoft.com'
-  - '+.ougannike.com'
   - '+.ougei.com'
   - '+.ouhua.info'
   - '+.ouj.com'
@@ -42847,7 +42824,6 @@ payload:
   - '+.qdliye.com'
   - '+.qdlongre.com'
   - '+.qdmama.net'
-  - '+.qdmarshell.com'
   - '+.qdmcxh.com'
   - '+.qdmm.com'
   - '+.qdnsyh.com'
@@ -44540,7 +44516,6 @@ payload:
   - '+.redicecn.com'
   - '+.redidc.com'
   - '+.redisbook.com'
-  - '+.redisdoc.com'
   - '+.redisfans.com'
   - '+.redisguide.com'
   - '+.redisinaction.com'
@@ -45657,7 +45632,6 @@ payload:
   - '+.scoee.com'
   - '+.scommander.com'
   - '+.scoregg.com'
-  - '+.scottfamilyadventures.com'
   - '+.scpgroup.com'
   - '+.scplt.com'
   - '+.scqcp.com'
@@ -46422,7 +46396,6 @@ payload:
   - '+.sharpmobi.com'
   - '+.shartu.com'
   - '+.shasx.com'
-  - '+.shaw.city'
   - '+.shawdo.com'
   - '+.shawdubie.com'
   - '+.shawnzeng.com'
@@ -47245,7 +47218,6 @@ payload:
   - '+.shuxinyc.com'
   - '+.shuxinyi.net'
   - '+.shuxuehua.com'
-  - '+.shuyang.tv'
   - '+.shuyangba.com'
   - '+.shuyfdc.com'
   - '+.shuyong.net'
@@ -49491,7 +49463,6 @@ payload:
   - '+.szhkhui.com'
   - '+.szhlodz.com'
   - '+.szhlsg.com'
-  - '+.szholdjoy.com'
   - '+.szhome.com'
   - '+.szhomeimg.com'
   - '+.szhot.com'
@@ -50493,7 +50464,6 @@ payload:
   - '+.thinksns.com'
   - '+.thinksrc.com'
   - '+.thinvent.com'
-  - '+.third.city'
   - '+.thishealthsummit.com'
   - '+.thiztech.com'
   - '+.thjunshi.com'
@@ -50546,7 +50516,6 @@ payload:
   - '+.tianapi.com'
   - '+.tianbaosi.com'
   - '+.tianbiao.net'
-  - '+.tianbig.com'
   - '+.tiancaiui.com'
   - '+.tiancaixing.com'
   - '+.tianchu.com'
@@ -54618,7 +54587,6 @@ payload:
   - '+.weplus.com'
   - '+.weplus.me'
   - '+.werewolf.online'
-  - '+.wesai.com'
   - '+.wesane.com'
   - '+.wesdom.me'
   - '+.weshaketv.com'
@@ -57276,7 +57244,6 @@ payload:
   - '+.xiji.com'
   - '+.xijiangtv.com'
   - '+.xijing01.com'
-  - '+.xijucn.com'
   - '+.xikcloud.com'
   - '+.xikii.com'
   - '+.xiladaili.com'
@@ -57581,7 +57548,6 @@ payload:
   - '+.xinxingly.com'
   - '+.xinxinhot.net'
   - '+.xinxinjoy.com'
-  - '+.xinxinkeji168.com'
   - '+.xinxinshukong.com'
   - '+.xinxisea.com'
   - '+.xinxue-edu.com'
@@ -58516,7 +58482,6 @@ payload:
   - '+.xwei.tv'
   - '+.xwhb.com'
   - '+.xwhodesign.com'
-  - '+.xwie.com'
   - '+.xwin77.com'
   - '+.xwjqr.com'
   - '+.xwjr.com'
