--- a/directbak.yaml
+++ b/directbak.yaml
@@ -237,7 +237,6 @@ payload:
   - '+.030mall.com'
   - '+.0310it.com'
   - '+.0311wifi.com'
-  - '+.0314.online'
   - '+.0316.cc'
   - '+.0328.com'
   - '+.033033.com'
@@ -1024,7 +1023,6 @@ payload:
   - '+.12580.tv'
   - '+.12580study.com'
   - '+.125882.com'
-  - '+.125a.net'
   - '+.125edu.com'
   - '+.125job.com'
   - '+.125mx.com'
@@ -2698,7 +2696,6 @@ payload:
   - '+.360gogreen.com'
   - '+.360gtm.com'
   - '+.360guanai.com'
-  - '+.360haoyao.com'
   - '+.360hapi.com'
   - '+.360hitao.com'
   - '+.360hqb.com'
@@ -4403,7 +4400,6 @@ payload:
   - '+.54yuqing.com'
   - '+.55.cc'
   - '+.55.la'
-  - '+.55015.com'
   - '+.550400.com'
   - '+.5507p.com'
   - '+.550891.com'
@@ -5517,7 +5513,6 @@ payload:
   - '+.7937.com'
   - '+.7940.com'
   - '+.79432.com'
-  - '+.795674.com'
   - '+.7958.net'
   - '+.7979u.com'
   - '+.797sun.com'
@@ -5821,7 +5816,6 @@ payload:
   - '+.8499136.com'
   - '+.8499159.com'
   - '+.8499163.com'
-  - '+.84992446.xyz'
   - '+.849959.com'
   - '+.8499683.com'
   - '+.84fk.com'
@@ -5861,7 +5855,6 @@ payload:
   - '+.86255845.com'
   - '+.86262.com'
   - '+.8633.com'
-  - '+.863347.com'
   - '+.8644aaw.com'
   - '+.865211.com'
   - '+.86590.com'
@@ -6656,7 +6649,6 @@ payload:
   - '+.9871.org'
   - '+.9873.com'
   - '+.987app.com'
-  - '+.987jx.com'
   - '+.987jx.net'
   - '+.987you.com'
   - '+.98809.com'
@@ -10760,7 +10752,6 @@ payload:
   - '+.bj-shouqi.com'
   - '+.bj-sydc.com'
   - '+.bj-tvart.com'
-  - '+.bj-zhongying.com'
   - '+.bj-zkhb.com'
   - '+.bj-zywh.com'
   - '+.bj003.com'
@@ -12580,7 +12571,6 @@ payload:
   - '+.cdairport.com'
   - '+.cdajcx.com'
   - '+.cdaten.com'
-  - '+.cdbcw.com'
   - '+.cdbdsec.com'
   - '+.cdbsdyk.com'
   - '+.cdbsfund.com'
@@ -12773,7 +12763,6 @@ payload:
   - '+.cdyee.com'
   - '+.cdyestar.com'
   - '+.cdygdq.com'
-  - '+.cdyimei.com'
   - '+.cdyou.net'
   - '+.cdyushun.com'
   - '+.cdyzg.com'
@@ -14994,7 +14983,6 @@ payload:
   - '+.cn163.net'
   - '+.cn168.com'
   - '+.cn18k.com'
-  - '+.cn20.com'
   - '+.cn22.net'
   - '+.cn2che.com'
   - '+.cn314.com'
@@ -17220,7 +17208,6 @@ payload:
   - '+.datuc.com'
   - '+.dav01.com'
   - '+.davdian.com'
-  - '+.davepellot.com'
   - '+.davidlovezoe.club'
   - '+.davinfo.com'
   - '+.davtd.com'
@@ -18552,7 +18539,6 @@ payload:
   - '+.dongfangfuli.com'
   - '+.dongfangnews.com'
   - '+.dongfangtech.net'
-  - '+.dongfeng-honda-elysion.com'
   - '+.dongfeng-honda-gienia.com'
   - '+.dongfeng-honda-greiz.com'
   - '+.dongfeng-honda-inspire.com'
@@ -23722,7 +23708,6 @@ payload:
   - '+.goushh.com'
   - '+.gouso.com'
   - '+.gousu.com'
-  - '+.goutanzi.com'
   - '+.gouwanmei.com'
   - '+.gouwubang.com'
   - '+.gouwuke.com'
@@ -26339,7 +26324,6 @@ payload:
   - '+.hkartist.net'
   - '+.hkbchina.com'
   - '+.hkcgart.com'
-  - '+.hkcn2.xyz'
   - '+.hkcna.hk'
   - '+.hkcoalition.com'
   - '+.hkcts.com'
@@ -26605,7 +26589,6 @@ payload:
   - '+.hnykcs.com'
   - '+.hnylstone.com'
   - '+.hnyouneng.com'
-  - '+.hnyuandian.com'
   - '+.hnyuanyou.com'
   - '+.hnyuedu.com'
   - '+.hnyunji.com'
@@ -28268,7 +28251,6 @@ payload:
   - '+.i9star.com'
   - '+.ia-shenzhen.com'
   - '+.iacblog.com'
-  - '+.iaczlg.cfd'
   - '+.iaddata.com'
   - '+.iadmob.com'
   - '+.iadmore.com'
@@ -29461,7 +29443,6 @@ payload:
   - '+.insta360.com'
   - '+.instafogging.com'
   - '+.installgreat.com'
-  - '+.instloan.com'
   - '+.insun-china.com'
   - '+.inswindow.com'
   - '+.insxz.com'
@@ -30838,7 +30819,6 @@ payload:
   - '+.jianzhanbao.net'
   - '+.jianzhangongsi.com'
   - '+.jianzhi8.com'
-  - '+.jianzhiba.net'
   - '+.jianzhibao.com'
   - '+.jianzhikeji.com'
   - '+.jianzhimao.com'
@@ -30919,7 +30899,6 @@ payload:
   - '+.jiayu0x.com'
   - '+.jiayuan-law.com'
   - '+.jiayuan.com'
-  - '+.jiayuguanhotel.com'
   - '+.jiazhao.com'
   - '+.jiazhongkeji.com'
   - '+.jiazhoulvke.com'
@@ -36917,7 +36896,6 @@ payload:
   - '+.maiyaole.com'
   - '+.maizhi.com'
   - '+.maiziedu.com'
-  - '+.maizim.com'
   - '+.maizipo.com'
   - '+.maizuo.com'
   - '+.majia99.com'
@@ -37046,7 +37024,6 @@ payload:
   - '+.manmu.net'
   - '+.mannkit.com'
   - '+.manogk.com'
-  - '+.manong.io'
   - '+.manongdao.com'
   - '+.manonggu.com'
   - '+.manongjc.com'
@@ -37414,7 +37391,6 @@ payload:
   - '+.meianjuwang.com'
   - '+.meiaoju.com'
   - '+.meibai14.com'
-  - '+.meibanlu.com'
   - '+.meibg.com'
   - '+.meibiaoyi.net'
   - '+.meican.com'
@@ -41553,7 +41529,6 @@ payload:
   - '+.pdazw.com'
   - '+.pdbeta.com'
   - '+.pdcuo.com'
-  - '+.pdcyr.com'
   - '+.pdd.net'
   - '+.pddcdn.com'
   - '+.pddeu.com'
@@ -44872,7 +44847,6 @@ payload:
   - '+.rollupjs.com'
   - '+.rom100.com'
   - '+.rom333.com'
-  - '+.romancingstories.com'
   - '+.romens.cloud'
   - '+.romhui.com'
   - '+.romjd.com'
@@ -47417,7 +47391,6 @@ payload:
   - '+.sinanya.com'
   - '+.sinaquyong.com'
   - '+.sinashow.com'
-  - '+.sinasinasinasina.com'
   - '+.sinastorage.com'
   - '+.sinasws.com'
   - '+.sinauda.com'
@@ -47550,7 +47523,6 @@ payload:
   - '+.sisijiyi.com'
   - '+.sisjava.com'
   - '+.sisp-china.com'
-  - '+.sistemsol.com'
   - '+.sisuoyun.com'
   - '+.siswin.com'
   - '+.site-digger.com'
@@ -47741,7 +47713,6 @@ payload:
   - '+.skyworth-ac.com'
   - '+.skyworth-cloud.com'
   - '+.skyworth-ea.com'
-  - '+.skyworth-mould.com'
   - '+.skyworth.com'
   - '+.skyworthbox.com'
   - '+.skyworthdigital.com'
@@ -50690,7 +50661,6 @@ payload:
   - '+.tielemao.com'
   - '+.tielu.org'
   - '+.tiepishihu.com'
-  - '+.tiepishihu.hk'
   - '+.tiequangame.com'
   - '+.tietie.la'
   - '+.tietuku.com'
@@ -50709,7 +50679,6 @@ payload:
   - '+.tigerbrokers.net'
   - '+.tigeresop.com'
   - '+.tigerfintech.com'
-  - '+.tigerhouse.cc'
   - '+.tigersecurities.com'
   - '+.tigeryun.com'
   - '+.tiham.com'
@@ -52171,6 +52140,7 @@ payload:
   - '+.ubiquant.com'
   - '+.ubismartparcel.com'
   - '+.ubixai.com'
+  - '+.ubixioe.com'
   - '+.ubja.vip'
   - '+.ublese.com'
   - '+.ubmconlinereg.com'
@@ -53093,7 +53063,6 @@ payload:
   - '+.videoyi.com'
   - '+.videoyx.com'
   - '+.videozhishi.com'
-  - '+.vieldeold.xyz'
   - '+.vienblog.com'
   - '+.viewones.com'
   - '+.viewstock.com'
@@ -55653,7 +55622,6 @@ payload:
   - '+.wrltxt.com'
   - '+.wrmjk.com'
   - '+.wrsa.net'
-  - '+.wrsaea.com'
   - '+.wrtnode.cc'
   - '+.wrtnode.com'
   - '+.wrtsz.com'
@@ -57322,7 +57290,6 @@ payload:
   - '+.xinfu888.com'
   - '+.xinfushe.com'
   - '+.xing73.com'
-  - '+.xingai.com'
   - '+.xingames.com'
   - '+.xingbangip.com'
   - '+.xingbo.tv'
@@ -62184,7 +62151,6 @@ payload:
   - '+.zhanggang.net'
   - '+.zhanggaoyuan.com'
   - '+.zhangge.net'
-  - '+.zhanggee.com'
   - '+.zhanghonghong.com'
   - '+.zhanghongliang.com'
   - '+.zhanghuanglong.com'
@@ -62924,7 +62890,6 @@ payload:
   - '+.zhuanmenmian.com'
   - '+.zhuannet.com'
   - '+.zhuanpinyin.com'
-  - '+.zhuansoo.com'
   - '+.zhuanstatic.com'
   - '+.zhuantilan.com'
   - '+.zhuanyejun.com'
