--- a/directbak.yaml
+++ b/directbak.yaml
@@ -4722,6 +4722,7 @@ payload:
   - '+.5fen.com'
   - '+.5fun.com'
   - '+.5fwan.com'
+  - '+.5g5gyy.com'
   - '+.5gcg.com'
   - '+.5glianc.com'
   - '+.5goto.com'
@@ -6149,7 +6150,6 @@ payload:
   - '+.91-box.com'
   - '+.91.com'
   - '+.910app.com'
-  - '+.910fd.com'
   - '+.910play.com'
   - '+.91160.com'
   - '+.9118fu.com'
@@ -7072,7 +7072,6 @@ payload:
   - '+.accu.cc'
   - '+.accurate-china.com'
   - '+.accyy.com'
-  - '+.acde.net'
   - '+.ace-pow.com'
   - '+.ace-rubber.com'
   - '+.acejoy.com'
@@ -8045,6 +8044,7 @@ payload:
   - '+.aliyunddos1005.com'
   - '+.aliyunddos1006.com'
   - '+.aliyunddos1007.com'
+  - '+.aliyunddos1008.com'
   - '+.aliyunddos1009.com'
   - '+.aliyunddos1010.com'
   - '+.aliyunddos1011.com'
@@ -8712,7 +8712,6 @@ payload:
   - '+.apriltq.com'
   - '+.aprovadimamma.net'
   - '+.apsgo.com'
-  - '+.apt.so'
   - '+.aptchina.com'
   - '+.aptchip.com'
   - '+.aptenon.com'
@@ -13062,6 +13061,7 @@ payload:
   - '+.chaimage.com'
   - '+.chain-store.net'
   - '+.chaincar.com'
+  - '+.chaincatcher.com'
   - '+.chainknow.com'
   - '+.chainnode.com'
   - '+.chainsdir.com'
@@ -18920,7 +18920,6 @@ payload:
   - '+.dtime.com'
   - '+.dtmao.cc'
   - '+.dtmuban.com'
-  - '+.dtqiufa.com'
   - '+.dtrcb.com'
   - '+.dts007.com'
   - '+.dtstack.com'
@@ -20402,6 +20401,7 @@ payload:
   - '+.eslosity.com'
   - '+.esmartwave.com'
   - '+.esmod-beijing.com'
+  - '+.esmplus.com'
   - '+.esnai.com'
   - '+.esnai.net'
   - '+.esoboy.com'
@@ -21973,6 +21973,7 @@ payload:
   - '+.foxwq.com'
   - '+.foxzld.com'
   - '+.foyuan.net'
+  - '+.fpdclub.net'
   - '+.fpdisplay.com'
   - '+.fpga-china.com'
   - '+.fpgabbs.com'
@@ -23692,6 +23693,7 @@ payload:
   - '+.gougoujp.com'
   - '+.gougoumh.com'
   - '+.gouhai.com'
+  - '+.gouhao.com'
   - '+.gouhaowang.com'
   - '+.gouhuasuan.shop'
   - '+.goukuai.com'
@@ -26430,7 +26432,6 @@ payload:
   - '+.hmsxw.com'
   - '+.hmszkj.com'
   - '+.hmting.com'
-  - '+.hmtv.me'
   - '+.hmxw.com'
   - '+.hmyz.com'
   - '+.hmz.com'
@@ -26481,6 +26482,7 @@ payload:
   - '+.hngh.org'
   - '+.hngican.com'
   - '+.hngoldcorp.com'
+  - '+.hngqjc.com'
   - '+.hngtrust.com'
   - '+.hngwg.com'
   - '+.hngyzx.org'
@@ -29149,7 +29151,6 @@ payload:
   - '+.imedp.com'
   - '+.imeete.com'
   - '+.imeete.net'
-  - '+.imeibian.com'
   - '+.imeidb.com'
   - '+.imeihei.com'
   - '+.imeiju.cc'
@@ -32228,6 +32229,7 @@ payload:
   - '+.jumeinet.com'
   - '+.jumengco.com'
   - '+.jumengren.com'
+  - '+.jumengtbs.net'
   - '+.jumi-cdn.com'
   - '+.jumi.com'
   - '+.jumi18.com'
@@ -44890,6 +44892,7 @@ payload:
   - '+.root-servers.world'
   - '+.root1111.com'
   - '+.rootcloud.com'
+  - '+.rootdata.com'
   - '+.rootguide.org'
   - '+.rootk.com'
   - '+.rootop.org'
@@ -45510,6 +45513,7 @@ payload:
   - '+.scdnmogt.com'
   - '+.scdnn4t9.com'
   - '+.scdno5zl.com'
+  - '+.scdnrlm1.com'
   - '+.scdnrvy1.com'
   - '+.scdnucc5.com'
   - '+.scdnurea.com'
@@ -46858,7 +46862,6 @@ payload:
   - '+.shoubaodan.com'
   - '+.shouce.ren'
   - '+.shouce365.com'
-  - '+.shouchaobao.vip'
   - '+.shoucheng123.com'
   - '+.shoucw.com'
   - '+.shoudayy.net'
@@ -54837,7 +54840,6 @@ payload:
   - '+.whsir.com'
   - '+.whsladz.com'
   - '+.whsladz.net'
-  - '+.whsoftway.com'
   - '+.whsql.org'
   - '+.whsqsoft.com'
   - '+.whsrc.com'
@@ -56544,6 +56546,7 @@ payload:
   - '+.xfztc.com'
   - '+.xgamevip.com'
   - '+.xgantt.net'
+  - '+.xgate.com'
   - '+.xgcs618.com'
   - '+.xgcsczyc.com'
   - '+.xgcsyg.com'
@@ -58760,6 +58763,7 @@ payload:
   - '+.yanghengjun.com'
   - '+.yanghua.com'
   - '+.yanghui.com'
+  - '+.yangjiaofood.com'
   - '+.yangjie.li'
   - '+.yangjisen.com'
   - '+.yangkatie.com'
@@ -61008,7 +61012,6 @@ payload:
   - '+.yundianjia.com'
   - '+.yundianseo.com'
   - '+.yundiantech.com'
-  - '+.yundns.vip'
   - '+.yundongfang.com'
   - '+.yundonghao.com'
   - '+.yundongit.com'
@@ -62594,6 +62597,7 @@ payload:
   - '+.zhiwo.com'
   - '+.zhiwushuo.com'
   - '+.zhiwuwang.com'
+  - '+.zhixi.com'
   - '+.zhixiaohuoke.com'
   - '+.zhixiaoren.com'
   - '+.zhixin-semi.com'
