--- a/directbak.yaml
+++ b/directbak.yaml
@@ -129,6 +129,7 @@ payload:
   - '+.021ren.com'
   - '+.021sports.com'
   - '+.021tk.com'
+  - '+.021wfz.com'
   - '+.021yongzhuo.com'
   - '+.022003.com'
   - '+.0221155.com'
@@ -1380,7 +1381,6 @@ payload:
   - '+.173zb.com'
   - '+.173zy.com'
   - '+.17446.com'
-  - '+.17558.net'
   - '+.17566.com'
   - '+.1758.com'
   - '+.175club.com'
@@ -4187,7 +4187,6 @@ payload:
   - '+.52fangzi.com'
   - '+.52fanxing.com'
   - '+.52flac.com'
-  - '+.52game.org'
   - '+.52gg.com'
   - '+.52gougouwang.com'
   - '+.52grz.com'
@@ -4950,7 +4949,6 @@ payload:
   - '+.62a.net'
   - '+.62game.com'
   - '+.63091138.com'
-  - '+.630shu.net'
   - '+.6318537ccc.com'
   - '+.63243.com'
   - '+.6328.net'
@@ -5846,7 +5844,6 @@ payload:
   - '+.86010.net'
   - '+.860527.com'
   - '+.860598.com'
-  - '+.860a.com'
   - '+.861522.com'
   - '+.86175.com'
   - '+.861817.com'
@@ -8341,7 +8338,6 @@ payload:
   - '+.annelhair.com'
   - '+.annhe.net'
   - '+.annto.com'
-  - '+.annuaire.plus'
   - '+.anoah.com'
   - '+.anonym-hi.com'
   - '+.anosmcloud.com'
@@ -9747,7 +9743,6 @@ payload:
   - '+.baoyz.com'
   - '+.baoz.net'
   - '+.baozang.com'
-  - '+.baozha.net'
   - '+.baozhayun.cloud'
   - '+.baozhenart.com'
   - '+.baozheng.cc'
@@ -11440,7 +11435,6 @@ payload:
   - '+.brentron.com'
   - '+.brg0.com'
   - '+.bricktou.com'
-  - '+.brico.zone'
   - '+.bridge-image.com'
   - '+.bridgee.net'
   - '+.brighost.com'
@@ -12346,7 +12340,6 @@ payload:
   - '+.ccbpension.com'
   - '+.ccbride.com'
   - '+.ccbwfs.com'
-  - '+.cccaq.com'
   - '+.cccbs.net'
   - '+.cccdun.com'
   - '+.cccf-cloud.com'
@@ -14097,7 +14090,6 @@ payload:
   - '+.chinawanda.com'
   - '+.chinawatchnet.com'
   - '+.chinawbk.com'
-  - '+.chinawbsyxh.com'
   - '+.chinawch.com'
   - '+.chinawebber.com'
   - '+.chinawebmap.com'
@@ -14873,7 +14865,6 @@ payload:
   - '+.cmcc-ecs.com'
   - '+.cmcc.in'
   - '+.cmcm.com'
-  - '+.cmcm5.com'
   - '+.cmcmcdn.com'
   - '+.cmct22.com'
   - '+.cmd5.com'
@@ -15033,6 +15024,7 @@ payload:
   - '+.cnbis.com'
   - '+.cnbis.org'
   - '+.cnbizmedia.com'
+  - '+.cnbjx.com'
   - '+.cnbksy.com'
   - '+.cnbkw.com'
   - '+.cnblogs.com'
@@ -15913,7 +15905,6 @@ payload:
   - '+.cppblog.com'
   - '+.cppc123.com'
   - '+.cppcns.com'
-  - '+.cppentry.com'
   - '+.cppfoto.com'
   - '+.cpph.com'
   - '+.cppinfo.com'
@@ -19270,7 +19261,6 @@ payload:
   - '+.dyrcb.net'
   - '+.dyrjjt.com'
   - '+.dytechnolog.com'
-  - '+.dytg02.xyz'
   - '+.dytg389.xyz'
   - '+.dytg390.xyz'
   - '+.dytg391.xyz'
@@ -20015,7 +20005,6 @@ payload:
   - '+.ejoy.com'
   - '+.ejoy365.com'
   - '+.ejoy365hk.com'
-  - '+.ejoy99.com'
   - '+.ejrfood.com'
   - '+.ejttp.com'
   - '+.eju.com'
@@ -20798,7 +20787,6 @@ payload:
   - '+.fabiaoqing.com'
   - '+.fabigbig.com'
   - '+.fabu114.com'
-  - '+.fabulous.plus'
   - '+.faburuanwen.com'
   - '+.facaishiyi.com'
   - '+.facang.com'
@@ -21745,7 +21733,6 @@ payload:
   - '+.flooc.com'
   - '+.floor181.com'
   - '+.floorb2b.com'
-  - '+.flora.fund'
   - '+.florentiavillage.com'
   - '+.flower188.com'
   - '+.flower33.com'
@@ -22913,6 +22900,7 @@ payload:
   - '+.geakr.com'
   - '+.geality.com'
   - '+.geapu.com'
+  - '+.gearfront.net'
   - '+.gearkr.com'
   - '+.geautos.com'
   - '+.gebi1.com'
@@ -25294,7 +25282,6 @@ payload:
   - '+.hawbel.com'
   - '+.hawkeye.fun'
   - '+.haxiu.com'
-  - '+.haxwx.cc'
   - '+.hayeen.com'
   - '+.hayseen.com'
   - '+.hazq.com'
@@ -25859,7 +25846,6 @@ payload:
   - '+.hengqian.com'
   - '+.hengqijy.com'
   - '+.hengqikuaiji.com'
-  - '+.hengshenggongyi.net'
   - '+.hengshuilaobaigan.net'
   - '+.hengtai-law.com'
   - '+.hengtiansoft.com'
@@ -30249,7 +30235,6 @@ payload:
   - '+.jaeosc.com'
   - '+.jafeney.com'
   - '+.jajqj.com'
-  - '+.jake.team'
   - '+.jakegame.com'
   - '+.jakehu.me'
   - '+.jalorsoft.com'
@@ -36857,7 +36842,6 @@ payload:
   - '+.mairoot.com'
   - '+.mairuan.com'
   - '+.maiscrm.com'
-  - '+.maishashop.com'
   - '+.maishebei.com'
   - '+.maishitv.com'
   - '+.maishou88.com'
@@ -36924,7 +36908,6 @@ payload:
   - '+.maldiveszh.com'
   - '+.maldun.com'
   - '+.males120.com'
-  - '+.malijing.com'
   - '+.maliquankai.com'
   - '+.mall-builder.com'
   - '+.mall.com'
@@ -37001,7 +36984,6 @@ payload:
   - '+.manhuatai.com'
   - '+.manhuayang.com'
   - '+.manibnb.com'
-  - '+.manifesto.life'
   - '+.maninmusic.com'
   - '+.manjiwang.com'
   - '+.manlinggame.com'
@@ -37282,7 +37264,6 @@ payload:
   - '+.mcu-home.com'
   - '+.mcufan.com'
   - '+.mcuisp.com'
-  - '+.mcujl.com'
   - '+.mcusky.com'
   - '+.mcuzone.com'
   - '+.mcuzx.net'
@@ -38279,7 +38260,6 @@ payload:
   - '+.mmsfw.com'
   - '+.mmsk.com'
   - '+.mmstat.com'
-  - '+.mmtcw.com'
   - '+.mmtrix.com'
   - '+.mmtrixcnc.com'
   - '+.mmtrixcnet.com'
@@ -39459,6 +39439,7 @@ payload:
   - '+.nbmedicalsystem.com'
   - '+.nboxnas.com'
   - '+.nbpolytheatre.com'
+  - '+.nbren.net'
   - '+.nbrj.com'
   - '+.nbrlzy.com'
   - '+.nbsason.com'
@@ -41545,7 +41526,6 @@ payload:
   - '+.pdgzf.com'
   - '+.pdidc.com'
   - '+.pdim.gs'
-  - '+.pdm.so'
   - '+.pdosgk.com'
   - '+.pdowncc.com'
   - '+.pdrcfw.com'
@@ -42950,7 +42930,6 @@ payload:
   - '+.qianbao.com'
   - '+.qianbaocard.com'
   - '+.qianbaohr.com'
-  - '+.qiancheng.me'
   - '+.qianchengriben.com'
   - '+.qiandaoapp.com'
   - '+.qiandaqian.com'
@@ -43453,6 +43432,7 @@ payload:
   - '+.qixin.com'
   - '+.qixin007.com'
   - '+.qixin18.com'
+  - '+.qixin19.com'
   - '+.qixincha.com'
   - '+.qixing123.com'
   - '+.qixingcr.com'
@@ -43594,7 +43574,6 @@ payload:
   - '+.qmzs.com'
   - '+.qnbar.com'
   - '+.qncyw.com'
-  - '+.qndb.net'
   - '+.qnfuli.com'
   - '+.qngcjx.com'
   - '+.qngslb.com'
@@ -46286,6 +46265,7 @@ payload:
   - '+.shangzhibo.tv'
   - '+.shangzhushan.com'
   - '+.shanhaizhanji.com'
+  - '+.shanhe.kim'
   - '+.shanhs.com'
   - '+.shanhu99.com'
   - '+.shanhuu.com'
@@ -51028,7 +51008,6 @@ payload:
   - '+.tongfu.net'
   - '+.tonggao.info'
   - '+.tongguanbao.net'
-  - '+.tonghs.com'
   - '+.tonghuaji.com'
   - '+.tonghuiqiye.com'
   - '+.tongji.com'
@@ -51111,6 +51090,7 @@ payload:
   - '+.topchitu.com'
   - '+.topciic.com'
   - '+.topcj.com'
+  - '+.topcpu.net'
   - '+.topcrab.com'
   - '+.topcsic.com'
   - '+.topdodo.com'
@@ -51289,7 +51269,6 @@ payload:
   - '+.tq520.net'
   - '+.tqcj.com'
   - '+.tqcto.com'
-  - '+.tqedu.com'
   - '+.tqedu.net'
   - '+.tqiantu.com'
   - '+.tql.ink'
@@ -51353,7 +51332,6 @@ payload:
   - '+.travelsky.net'
   - '+.travelwuhan.com'
   - '+.travelyee.com'
-  - '+.treation.com'
   - '+.treehousesub.com'
   - '+.treetwins.com'
   - '+.treeyee.com'
@@ -52364,7 +52342,6 @@ payload:
   - '+.uminehotel.com'
   - '+.umineiot.com'
   - '+.uminsky.com'
-  - '+.umivi.net'
   - '+.umiwi.com'
   - '+.umjicanvas.com'
   - '+.uml-tech.com'
@@ -52492,7 +52469,6 @@ payload:
   - '+.uooyoo.com'
   - '+.uoozi.com'
   - '+.uoschina.com'
-  - '+.uoser.org'
   - '+.uouo123.com'
   - '+.uovz.com'
   - '+.up100mb.com'
@@ -52809,7 +52785,6 @@ payload:
   - '+.v5ppt.com'
   - '+.v5shop.com'
   - '+.v5tv.com'
-  - '+.v66666666.com'
   - '+.v6c.cc'
   - '+.v6dp.com'
   - '+.v6lvs.com'
@@ -56180,7 +56155,6 @@ payload:
   - '+.x118.net'
   - '+.x12plus.com'
   - '+.x1340.com'
-  - '+.x158.tv'
   - '+.x1997.net'
   - '+.x23118.com'
   - '+.x23119.com'
@@ -56442,7 +56416,6 @@ payload:
   - '+.xdjunxiao.com'
   - '+.xdjy369.com'
   - '+.xdkb.net'
-  - '+.xdkcw.com'
   - '+.xdkjjy.com'
   - '+.xdkjpx.com'
   - '+.xdmb.xyz'
@@ -59349,7 +59322,6 @@ payload:
   - '+.yichengji.com'
   - '+.yichengjiajupt.com'
   - '+.yichesafe.com'
-  - '+.yichmh.com'
   - '+.yichuyifan.com'
   - '+.yiclear.com'
   - '+.yicongfound.org'
@@ -59879,6 +59851,7 @@ payload:
   - '+.yizhikan.com'
   - '+.yizhiwechat.com'
   - '+.yizhixiaogame.com'
+  - '+.yizidy.com'
   - '+.yizimg.com'
   - '+.yizlife.com'
   - '+.yizu.org'
@@ -60034,7 +60007,6 @@ payload:
   - '+.ymt.com'
   - '+.ymt360.com'
   - '+.ymtc.com'
-  - '+.ymtjfxly.com'
   - '+.ymtmt.com'
   - '+.ymtnet.com'
   - '+.ymuuy.com'
@@ -62610,7 +62582,6 @@ payload:
   - '+.zhixueyun.com'
   - '+.zhiye.com'
   - '+.zhiyeapp.com'
-  - '+.zhiyehaiwai.com'
   - '+.zhiyequan.com'
   - '+.zhiyi.com'
   - '+.zhiyicx.com'
@@ -63489,7 +63460,6 @@ payload:
   - '+.zmfx8.com'
   - '+.zmgov.com'
   - '+.zmgrcw.com'
-  - '+.zmidc.com'
   - '+.zmifi.com'
   - '+.zmingcx.com'
   - '+.zmirrordemo.com'
@@ -63884,7 +63854,6 @@ payload:
   - '+.zuimeiqidai.com'
   - '+.zuimeitianqi.com'
   - '+.zuimeix.com'
-  - '+.zuimh.com'
   - '+.zuiqiangyingyu.net'
   - '+.zuirede.com'
   - '+.zuishidai.com'
